--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/image": "1.11.0",
     "@nuxt/scripts": "0.13.0",
     "@nuxt/test-utils": "3.19.2",
+    "@nuxtjs/tailwindcss": "6.14.0",
     "@unhead/vue": "^2.0.19",
     "eslint": "^9.37.0",
     "nuxt": "^4.1.3",
