--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@nuxt/scripts": "0.13.0",
     "@nuxt/test-utils": "3.19.2",
     "@nuxtjs/tailwindcss": "6.14.0",
+    "@sidebase/nuxt-auth": "1.1.0",
     "@unhead/vue": "^2.0.19",
     "eslint": "^9.37.0",
+    "next-auth": "~4.21.1",
     "nuxt": "^4.1.3",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
