--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@nuxtjs/tailwindcss": "6.14.0",
     "@pinia/nuxt": "^0.5.1",
     "@unhead/vue": "^2.0.19",
+    "@vue-final-modal/nuxt": "^1.0.3",
     "eslint": "^9.37.0",
     "nuxt": "^4.1.3",
+    "nuxt-toast": "^1.1.4",
     "pinia": "^2.1.7",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
