--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@types/set-cookie-parser": "^2.4.10",
     "@vitest/ui": "^1.6.0",
     "@vue/test-utils": "^2.4.6",
     "happy-dom": "^15.11.6",
+    "set-cookie-parser": "^2.7.2",
     "vitest": "^1.6.0"
   }
 }
