--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vue-final-modal/nuxt": "^1.0.3",
     "eslint": "^9.37.0",
     "nuxt": "^4.1.3",
+    "nuxt-auth-sanctum": "1.4.2",
     "nuxt3-notifications": "^1.3.1",
     "pinia": "^2.1.7",
     "vue": "^3.5.22",
